# internal/api/clientgrpc/databases.go
@@ -17,11 +17,12 @@ import (
 
 type DatabasesService struct {
 	clientv1.UnimplementedDatabasesServiceServer
-	databases *client.Databases
+	databases    *client.Databases
+	transactions *client.Transactions
 }
 
-func NewDatabasesService(databases *client.Databases) *DatabasesService {
-	return &DatabasesService{databases: databases}
+func NewDatabasesService(databases *client.Databases, transactions *client.Transactions) *DatabasesService {
+	return &DatabasesService{databases: databases, transactions: transactions}
 }
 
 func (s *DatabasesService) CreateDocument(ctx context.Context, req *clientv1.CreateDocumentRequest) (*clientv1.Document, error) {
